# proBach

./: .gitignore  README.md
code/: .gitignore
code/candidate/ark_sumcheck/: Cargo.toml
code/candidate/ark_sumcheck/src/: main.rs
code/candidate/epfl_sumcheck/: .gitignore  Cargo.toml  dict.txt
code/candidate/epfl_sumcheck/src/: cov_target.rs  fuzz_target.rs  lib.rs  main.rs
code/fuzzer/: fuzz.py
code/fuzzer/afl_harness/: gen_seed.c  harness.c
code/fuzzer/afl_harness/seeds/: babybear  babybear_basic  constant  edge_alt_m31  edge_alt_z19  edge_challenge0_m31  edge_challenge0_z19  edge_challenge1_m31  edge_challenge1_z19  edge_const_babybear  edge_const_m31  edge_const_z19  edge_maxcoeff_m31  edge_n1_babybear  edge_n1_goldilocks  edge_n1_koalabear  edge_n1_m31  edge_n1_z19  edge_n4_allones_m31  edge_n4_deep_m31  edge_n4_deep_z19  edge_pairs_equal_z19  edge_sparse_m31  edge_sparse_z19  edge_sum_zero_z19  goldilocks  goldilocks_basic  koalabear  koalabear_basic  m31  m31_basic  many_terms  max_coeff  n1_const  n4_full_mono  n4_multi  z19  zero_poly
code/lean/: Main.lean  MainBabyBear.lean  MainGoldilocks.lean  MainKoalaBear.lean  MainM31.lean  SumcheckFFI.lean  lake-manifest.json  lakefile.lean
code/sumcheck-lean4/: .gitignore  Main.lean  input.txt  lakefile.lean
doc/: main.typ
